@@ -1,3 +1,14 @@
+2007-10-23  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Darin.
+
+        * resources/sunspider-analyze-results.js: Do the error range
+        properly, using the t-distribution instead of 1.96 (which was
+        based on the normal distribution).
+        
+        * sunspider: Print results in a way that will be friendlier to the
+        soon-to-come compare mode.
+
 2007-10-22  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Review.
